--- a/Parte 2/Versão_bibliotecas.ipynb
+++ b/Parte 2/Versão_bibliotecas.ipynb
@@ -1,63 +1,74 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
     "colab": {
-      "name": "Untitled6.ipynb",
-      "version": "0.3.2",
-      "provenance": []
+     "base_uri": "https://localhost:8080/",
+     "height": 85
     },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+    "colab_type": "code",
+    "id": "kffSOYcgir5Q",
+    "outputId": "50032805-bedc-4165-d643-22a32105367e"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Versão do pandas -> 0.23.4\n",
+      "Versão do numpy -> 1.16.2\n",
+      "Versão do scipy -> 1.2.1\n",
+      "Versão do matplotlib -> 3.0.3\n"
+     ]
     }
+   ],
+   "source": [
+    "import pandas, numpy, scipy, matplotlib\n",
+    "\n",
+    "print('Versão do pandas -> %s' % pandas.__version__)\n",
+    "print('Versão do numpy -> %s' % numpy.__version__)\n",
+    "print('Versão do scipy -> %s' % scipy.__version__)\n",
+    "print('Versão do matplotlib -> %s' % matplotlib.__version__)"
+   ]
   },
-  "cells": [
-    {
-      "metadata": {
-        "id": "kffSOYcgir5Q",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "50032805-bedc-4165-d643-22a32105367e"
-      },
-      "cell_type": "code",
-      "source": [
-        "import pandas, numpy, scipy, matplotlib\n",
-        "\n",
-        "print('Versão do pandas -> %s' % pandas.__version__)\n",
-        "print('Versão do numpy -> %s' % numpy.__version__)\n",
-        "print('Versão do scipy -> %s' % scipy.__version__)\n",
-        "print('Versão do matplotlib -> %s' % matplotlib.__version__)"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Versão do pandas -> 0.23.4\n",
-            "Versão do numpy -> 1.16.2\n",
-            "Versão do scipy -> 1.2.1\n",
-            "Versão do matplotlib -> 3.0.3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "bcAPEvyqjJCx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "bcAPEvyqjJCx"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "name": "Untitled6.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
