--- a/Parte 2/Exercícios.ipynb
+++ b/Parte 2/Exercícios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 1538,
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -72,7 +72,7 @@
        "53130.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "id": "DuPdgHQGZWmx"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -167,7 +167,7 @@
        "0.3750000000000001"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "id": "tpFZH0PqaXe_"
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -225,7 +225,7 @@
        "0.2247732021287407"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -262,7 +262,7 @@
        "0.22477320212874052"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {
     "id": "1s77W5cIdidd"
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -322,7 +322,7 @@
        "0.11325599999999998"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -360,7 +360,7 @@
        "5.662799999999999"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -453,7 +453,7 @@
        "3.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -493,7 +493,7 @@
        "0.9986501019683699"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 936,
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -571,7 +571,7 @@
        "-1.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -609,7 +609,7 @@
        "1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -647,7 +647,7 @@
        "0.6826894921370859"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -693,7 +693,7 @@
        "2.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -731,7 +731,7 @@
        "4.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -769,7 +769,7 @@
        "0.02271846070634609"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {
     "executionInfo": {
      "elapsed": 826,
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -847,7 +847,7 @@
        "-2.3333333333333335"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -885,7 +885,7 @@
        "1.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -923,7 +923,7 @@
        "0.8315294174398976"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -969,7 +969,7 @@
        "2.6666666666666665"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1007,7 +1007,7 @@
        "0.0038303805675897365"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1053,7 +1053,7 @@
        "-0.6666666666666666"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1091,7 +1091,7 @@
        "0.2524925375469229"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1146,7 +1146,7 @@
        "0.9750021048517795"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1192,7 +1192,7 @@
        "0.0157776073910905"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1238,7 +1238,7 @@
        "0.2118553985833967"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1284,7 +1284,7 @@
        "0.27759532475346493"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
        "0.95"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
        "1.6448536269514722"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
        "0.24745669886621613"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "0.40703004864353387"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
        "(27.592969951356466, 28.407030048643534)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1458,7 @@
        "(27.592969951356466, 28.407030048643534)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,6 +1466,229 @@
    "source": [
     "intervalo = norm.interval(alpha = 0.90, loc = media_amostral, scale = sigma)\n",
     "intervalo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Obtendo o tamanho da amostra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.90 / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.95"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.90 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6448536269514722"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.95)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "media = 45.5\n",
+    "sigma = 15\n",
+    "significancia = 0.10\n",
+    "confianca = 1 - significancia\n",
+    "erro_percentual = 0.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.55"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = media * erro_percentual\n",
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = (z * (sigma / e)) ** 2\n",
+    "n.round()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Amostra de sacos de farinha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.475"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.95 / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.975"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 + (0.95 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.959963984540054"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.975)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = 0.3 * 1000\n",
+    "sigma = 480\n",
+    "N = 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.790887571738981"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = (z**2 * sigma**2 * N) / (z**2 * sigma**2 + e**2 * (N - 1))\n",
+    "n"
    ]
   }
  ],
